# compressor

./: .gitmodules  README.md
.github/workflows/: docker.yml
js-compressor/: Dockerfile  cli.js  detect.js  file1.txt  file1.txt.rz  index.js  lz.js  package-lock.json  package.json  rle.js
js-compressor/benches/: benchmark.js
js-compressor/test/: lz.test.js  rle.test.js
js-compressor/utils/: fileIO.js
rust-compressor/: .gitignore  Cargo.toml  Dockerfile
rust-compressor/benches/: compression_benchmark.rs
rust-compressor/src/: cli.rs  detect.rs  lib.rs  main.rs  rle.md
rust-compressor/src/algorithms/: lz77.rs  rle.rs
rust-compressor/src/io/: file.rs  stream.rs
rust-compressor/test/: lz.test.js  rle.test.js
