[package]
name = "rust-compressor"
version = "0.1.0"
edition = "2021"
authors = ["Prosper <your.email@example.com>"]
description = "A Rust-based file compression tool"

[dependencies]
byteorder = "1.5"
leb128 = "0.2"
clap = { version = "4.4", features = ["derive"] }
tar = "0.4"
walkdir = "2.4"
flate2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[[bench]]
name = "compression_benchmark"
harness = false